Fixed image leaving whitespace on big screens bug. Almost finished styling up to 3500px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,7 @@ label {
     .thanks-section h3 {
         margin-top: 60px;
     }
+
 }
 
 @media only screen and (max-width: 443.5px) {
@@ -310,6 +311,7 @@ label {
     video {
         width: 300px;
     }
+
 }
 
 @media only screen and (min-width: 1100px) {
@@ -317,6 +319,7 @@ label {
     #video-heading {
         padding-top: 20px;
     }
+
 }
 
 @media only screen and (min-width: 1200px) {
@@ -328,6 +331,7 @@ label {
     #contact-heading {
         padding-top: 20px;
     }
+
 }
 
 @media only screen and (min-width: 1300px) {
@@ -356,6 +360,7 @@ label {
     .thanks-section h3 {
         padding-top: 50px;
     }
+
 }
 
 @media only screen and (min-width: 1500px) {
@@ -381,6 +386,7 @@ label {
         padding-top: 50px;
         font-size: 200%;
     }
+
 }
 
 @media only screen and (min-width: 1700px) {
@@ -404,7 +410,9 @@ label {
 
     .thanks-section h3 {
         padding: 100px;
+        font-size: 200%;
     }
+
 }
 
 @media only screen and (min-width: 1900px) {
@@ -432,8 +440,10 @@ label {
     }
 
     .thanks-section h3 {
-        padding: 100px;
+        padding: 120px;
+        font-size: 220%;
     }
+
 }
 
 @media only screen and (min-width: 2100px) {
@@ -443,7 +453,7 @@ label {
     }
 
     #video-heading {
-        padding-top: 120px;
+        padding-top: 150px;
     }
 
     #contact-heading {
@@ -453,5 +463,224 @@ label {
     .thanks-section h3 {
         padding: 100px;
     }
+
+    img {
+        width: 800px; 
+    }
+
+    .thanks-section h3 {
+        padding: 140px;
+        font-size: 240%;
+    }
+
 }
 
+@media only screen and (min-width: 2300px) {
+
+    .main h2, .main p {
+        font-size: 220%;
+    }
+
+    #video-heading {
+        padding-top: 150px;
+        padding-bottom: 50px;
+    }
+
+    .video-section {
+        font-size: 150%;
+    }
+
+    #contact-heading {
+        padding-top: 120px;
+    }
+
+    .thanks-section h3 {
+        padding: 160px;
+        font-size: 260%;
+    }
+
+    img {
+        width: 800px; 
+    }
+
+    .contact-section, .btn, .form-control {
+        font-size: 120%;
+    }
+
+}
+
+@media only screen and (min-width: 2500px) {
+
+    .main h2, .main p {
+        font-size: 240%;
+    }
+
+    #video-heading {
+        padding-top: 160px;
+    }
+
+    #contact-heading {
+        padding-top: 140px;
+    }
+
+    img {
+        width: 900px; 
+    }
+
+    .contact-section, .btn, .form-control {
+        font-size: 130%;
+    }
+    
+    .nav-link, footer {
+        font-size: 120%;
+    }
+
+    .title {
+        font-size: 190%;
+    }
+
+}
+
+@media only screen and (min-width: 2700px) {
+
+    .main h2, .main p {
+        font-size: 260%;
+    }
+
+    #video-heading {
+        padding-top: 200px;
+        padding-bottom: 70px;
+    }
+
+    .video-section {
+        font-size: 200%;
+    }
+
+    #contact-heading {
+        padding-top: 120px;
+    }
+
+    .thanks-section h3 {
+        padding: 200px;
+        font-size: 300%;
+    }
+
+    img {
+        width: 1000px; 
+    }
+
+    .contact-section, .btn, .form-control {
+        font-size: 140%;
+    }
+    
+    .nav-link, footer {
+        font-size: 140%;
+    }
+
+    .title {
+        font-size: 210%;
+    }
+
+}
+
+@media only screen and (min-width: 2900px) {
+
+    .main h2, .main p {
+        font-size: 280%;
+    }
+
+    #video-heading {
+        padding-top: 180px;
+    }
+
+    #contact-heading {
+        padding-top: 160px;
+    }
+
+    .thanks-section h3 {
+        padding: 350px;
+        font-size: 350%;
+    }
+
+    img {
+        width: 1050px; 
+    }
+    
+    .contact-section, .btn, .form-control {
+        font-size: 150%;
+    }
+
+    .nav-link, footer {
+        font-size: 160%;
+    }
+
+    .title {
+        font-size: 240%;
+    }
+
+}
+
+@media only screen and (min-width: 3100px) {
+
+    .main h2, .main p {
+        font-size: 300%;
+    }
+
+    #video-heading {
+        padding-top: 250px;
+        padding-bottom: 90px;
+    }
+
+    .video-section {
+        font-size: 240%;
+    }
+
+    #contact-heading {
+        padding-top: 160px;
+    }
+
+    img {
+        width: 1100px; 
+    }
+
+    .contact-section, .btn, .form-control {
+        font-size: 160%;
+    }
+
+    .nav-link, footer {
+        font-size: 180%;
+    }
+
+    .title {
+        font-size: 270%;
+    }
+
+}
+
+@media only screen and (min-width: 3300px) {
+
+    .main h2, .main p {
+        font-size: 340%;
+    }
+
+    #video-heading {
+        padding-top: 180px;
+    }
+
+    #contact-heading {
+        padding-top: 160px;
+    }
+
+    img {
+        width: 1200px; 
+    }
+    
+    .nav-link, footer {
+        font-size: 200%;
+    }
+
+    .title {
+        font-size: 300%;
+    }
+    
+}
